# qvalve

./: .flake8  .gitignore  LICENSE  Makefile  Python.mk  README.md  pyproject.toml
qvalve/: __init__.py  __main__.py  cli.py  gameserver.py  mainserver.py  reports.py
qvalve/data/: gamebots.csv
qvalve/flaskapp/: __init__.py  forms.py  routes.py
qvalve/flaskapp/static/: app.js  style.css
qvalve/flaskapp/templates/: base.html  index.html
tests/: test_cli.py  test_qvalve.py
