[project]
name = "qvalve"
version = "1.0.3"
description = "Query Valve Main and Game Servers"
authors = [
    {name = "Russel Lane", email = "russel@rlane.com"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["tf2", "team-fortress-2", "steam", "valve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: First Person Shooters"
]
requires-python = ">=3.10"
dependencies = [
    "bootstrap-flask>=2.4.1",
    "flask-table>=0.5.0",
    "flask-wtf>=1.2.2",
    "flask>=3.0.3",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "rlane-libcli>=1.0.7",
    "steam>=1.4.4",
    "wtforms>=3.2.1",
]

[project.urls]
Homepage = "https://github.com/russellane/qvalve"

[project.scripts]
qvalve = "qvalve.cli:main"

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.10.0",
    "flake8-bugbear>=24.10.31",
    "flake8-pydocstyle>=0.2.4",
    "flake8-pylint>=0.2.1",
    "flake8-pytest-style>=2.0.0",
    "flake8-simplify>=0.21.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
]

[tool.black]
line-length = "97"

[tool.isort]
line_length = "97"
profile = "black"

[tool.pylint.format]
max-line-length = "97"

[tool.pylint.messages_control]
enable = [
    "useless-suppression",
]
fail-on = [
    # useless-suppression
    "I0021",
]

good-names = [
    "k", "v",
]

[tool.pydocstyle]
convention = "google"
add-ignore = [
    # "D105",     # pep257 numpy google   # Missing docstring in magic method
    "D105",
    # "D202",     # pep257 numpy google   # No blank lines allowed after function docstring
    "D202",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# vim: set ts=4 sw=4 et:
